--- a/Manage_Laundryshop/src/main/resources/application.properties
+++ b/Manage_Laundryshop/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=Manage_Laundryshop
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3307/csdl
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=pass
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
