--- a/LaundryShop/src/main/resources/application.properties
+++ b/LaundryShop/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=LaundryShop
 spring.datasource.url=jdbc:mysql://localhost:3306/laundryshop
 spring.datasource.username=root
 spring.datasource.password=hauhauhau1
+server.port=8080
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
